提现功能完成

--- a/app/src/main/res/layout/activity_balance_pending.xml
+++ b/app/src/main/res/layout/activity_balance_pending.xml
@@ -33,6 +33,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:background="@color/color_of_f6f5f8"
+                android:clickable="true"
+                android:focusable="true"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
                 android:paddingLeft="25dp"
@@ -145,7 +147,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="15dp"
-                android:text="账户余额"
+                android:text="全部提现"
                 android:textColor="@color/color_of_3d5688"
                 android:textSize="13dp"
                 app:layout_constraintStart_toEndOf="@id/tv_count"
