--- a/app/src/main/res/layout/fragment_attestation_driver.xml
+++ b/app/src/main/res/layout/fragment_attestation_driver.xml
@@ -44,7 +44,7 @@
                 android:layout_marginLeft="@dimen/gap_app"
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="10dp"
-                android:text="驾驶证"
+                android:text="驾驶证主页"
                 android:textColor="@color/color_of_666666"
                 android:textSize="14dp" />
 
@@ -79,7 +79,53 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="7dp"
-                        android:text="上传驾驶证"
+                        android:text="上传驾驶证主页"
+                        android:textColor="@color/color_of_cccccc"
+                        android:textSize="14dp" />
+                </LinearLayout>
+
+            </FrameLayout> <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/gap_app"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="10dp"
+                android:text="驾驶证副页"
+                android:textColor="@color/color_of_666666"
+                android:textSize="14dp" />
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="160dp"
+                android:layout_marginLeft="@dimen/gap_app"
+                android:layout_marginRight="@dimen/gap_app">
+
+                <com.fy.androidlibrary.widget.CircularImageView
+                    android:id="@+id/img_driver1"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/ovl_5_f6f5f8"
+                    app:viewradius="5dp" />
+
+                <LinearLayout
+                    android:id="@+id/ll_driver1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:src="@mipmap/camera" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="7dp"
+                        android:text="上传驾副页"
                         android:textColor="@color/color_of_cccccc"
                         android:textSize="14dp" />
                 </LinearLayout>
