--- a/app/src/main/res/layout/activity_order_receiving.xml
+++ b/app/src/main/res/layout/activity_order_receiving.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/color_of_f5f5f5"
-    tools:context=".ui.MyOrderActivity">
+    tools:context=".ui.OrderReceivingCenterActivity">
     <include layout="@layout/toolbar"/>
     <LinearLayout
         android:paddingLeft="20dp"
