--- a/app/src/main/res/layout/fragment_home_type.xml
+++ b/app/src/main/res/layout/fragment_home_type.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <LinearLayout
@@ -17,6 +17,7 @@
             android:textColor="@color/color_of_040000"
             android:text="我的送货"
             android:textStyle="bold"
+            android:id="@+id/tv_title"
             android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
@@ -46,6 +47,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:id="@+id/rv"
+        android:overScrollMode="never"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:layout_height="wrap_content"/>
