--- a/companylibrary/src/main/res/values/colors.xml
+++ b/companylibrary/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
     <color name="color_of_be8c46">#BE8C46</color>
     <color name="color_of_999999">#999999</color>
     <color name="color_of_ffffff">#ffffff</color>
+    <color name="color_of_f06f28">#F06F28</color>
     <color name="color_of_f2f2f2">#f2f2f2</color>
     <color name="color_of_tran">#00000000</color>
     <color name="color_of_656c99">#656c99</color>
