--- a/app/src/main/res/layout/activity_car_add_modify.xml
+++ b/app/src/main/res/layout/activity_car_add_modify.xml
@@ -31,111 +31,32 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/gap_app"
                 android:layout_marginTop="15dp"
-                android:layout_marginBottom="10dp"
                 android:text="行驶证主页"
                 android:textColor="@color/color_of_666666"
                 android:textSize="14dp" />
-            <FrameLayout
+            <com.hongniu.freight.widget.ImageInforView
                 android:layout_width="match_parent"
+                android:id="@+id/img_positive"
+                android:layout_marginTop="10dp"
                 android:layout_height="200dp"
                 android:layout_marginLeft="@dimen/gap_app"
-                android:layout_marginRight="@dimen/gap_app">
+                android:layout_marginRight="@dimen/gap_app"/>
 
-                <com.fy.androidlibrary.widget.CircularImageView
-                    android:id="@+id/img_positive"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:scaleType="centerCrop"
-                    android:src="@color/color_of_f6f5f8"
-                    app:viewradius="5dp" />
-
-                <LinearLayout
-                    android:id="@+id/ll_positive"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:layout_width="20dp"
-                        android:layout_height="20dp"
-                        app:srcCompat="@drawable/icon_scan_040000" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        android:text="扫描上传行驶证副正面"
-                        android:textColor="@color/color_of_040000"
-                        android:textSize="14dp" />
-                </LinearLayout>
-                <ImageView
-                    android:id="@+id/bt_img_positive"
-                    android:layout_gravity="center"
-                    android:layout_width="46dp"
-                    android:visibility="gone"
-                    android:layout_height="46dp"
-                    android:src="@mipmap/icon_carme"
-                      />
-
-
-            </FrameLayout>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/gap_app"
                 android:layout_marginTop="15dp"
-                android:layout_marginBottom="10dp"
-                android:text="行驶证副页"
+                android:text="行驶证副业"
                 android:textColor="@color/color_of_666666"
                 android:textSize="14dp" />
-            <FrameLayout
+            <com.hongniu.freight.widget.ImageInforView
                 android:layout_width="match_parent"
+                android:id="@+id/img_minus"
+                android:layout_marginTop="10dp"
                 android:layout_height="200dp"
                 android:layout_marginLeft="@dimen/gap_app"
-                android:layout_marginTop="10dp"
-                android:layout_marginRight="@dimen/gap_app">
-
-                <com.fy.androidlibrary.widget.CircularImageView
-                    android:id="@+id/img_minus"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:scaleType="centerCrop"
-                    android:src="@color/color_of_f6f5f8"
-                    app:viewradius="5dp" />
-
-                <LinearLayout
-                    android:id="@+id/ll_minus"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:layout_width="20dp"
-                        android:layout_height="20dp"
-                        app:srcCompat="@drawable/icon_scan_040000" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        android:text="扫描上传行驶证副页面"
-                        android:textColor="@color/color_of_040000"
-                        android:textSize="14dp" />
-                </LinearLayout>
-
-                <ImageView
-                    android:id="@+id/bt_img_minus"
-                    android:layout_gravity="center"
-                    android:layout_width="46dp"
-                    android:visibility="gone"
-                    android:layout_height="46dp"
-                    android:src="@mipmap/icon_carme"
-                    />
-            </FrameLayout>
+                android:layout_marginRight="@dimen/gap_app"/>
 
             <com.fy.companylibrary.widget.ItemTextView
                 android:id="@+id/item_car_type"
