--- a/app/src/main/res/layout/fragment_attestation_carrier_company.xml
+++ b/app/src/main/res/layout/fragment_attestation_carrier_company.xml
@@ -56,43 +56,13 @@
                 android:textColor="@color/color_of_666666"
                 android:textSize="14dp" />
 
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="160dp"
+            <com.hongniu.freight.widget.ImageInforView
+                android:id="@+id/img_driver"
+
                 android:layout_marginLeft="@dimen/gap_app"
-                android:layout_marginRight="@dimen/gap_app">
-
-                <com.fy.androidlibrary.widget.CircularImageView
-                    android:id="@+id/img_driver"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/ovl_5_f6f5f8"
-                    app:viewradius="5dp" />
-
-                <LinearLayout
-                    android:id="@+id/ll_driver"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:src="@mipmap/camera" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="7dp"
-                        android:text="上传道路运输许可证"
-                        android:textColor="@color/color_of_cccccc"
-                        android:textSize="14dp" />
-                </LinearLayout>
-
-            </FrameLayout>
+                android:layout_marginRight="@dimen/gap_app"
+                android:layout_width="match_parent"
+                android:layout_height="160dp"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -102,45 +72,13 @@
                 android:text="营业执照"
                 android:textColor="@color/color_of_666666"
                 android:textSize="14dp" />
+            <com.hongniu.freight.widget.ImageInforView
+                android:id="@+id/img_business_license"
 
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="160dp"
                 android:layout_marginLeft="@dimen/gap_app"
-                android:layout_marginRight="@dimen/gap_app">
-
-                <com.fy.androidlibrary.widget.CircularImageView
-                    android:id="@+id/img_business_license"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/ovl_5_f6f5f8"
-                    app:viewradius="5dp" />
-
-                <LinearLayout
-                    android:id="@+id/ll_business_license"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:orientation="vertical">
-
-                    <ImageView
-
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:src="@mipmap/camera" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="7dp"
-                        android:text="上传营业执照"
-                        android:textColor="@color/color_of_cccccc"
-                        android:textSize="14dp" />
-                </LinearLayout>
-
-            </FrameLayout>
+                android:layout_marginRight="@dimen/gap_app"
+                android:layout_width="match_parent"
+                android:layout_height="160dp"/>
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
