--- a/app/src/main/res/layout/dialog_alert.xml
+++ b/app/src/main/res/layout/dialog_alert.xml
@@ -19,7 +19,7 @@
     <TextView
         android:id="@+id/tv_content"
         android:text="标题"
-        android:visibility="gone"
+        android:visibility="visible"
         android:layout_marginBottom="10dp"
         android:gravity="center"
         android:layout_width="match_parent"
