--- a/app/src/main/res/layout/activity_order_detail.xml
+++ b/app/src/main/res/layout/activity_order_detail.xml
@@ -277,50 +277,51 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
+        android:id="@+id/ll_bottom1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/color_of_ffffff"
-        android:divider="@drawable/ovl_5_ffffff"
+        android:orientation="horizontal"
+        android:paddingLeft="10dp" />
+
+    <LinearLayout
+        android:id="@+id/ll_bottom"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/color_of_ffffff"
+        android:divider="@drawable/ovl_10_gap"
+        android:dividerPadding="5dp"
+        android:showDividers="middle"
         android:orientation="horizontal"
         android:paddingLeft="10dp"
+        android:paddingTop="10dp"
         android:paddingRight="10dp"
-        android:showDividers="middle">
+        android:paddingBottom="10dp"
+       >
 
         <TextView
             android:id="@+id/bt_left"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginBottom="10dp"
+            android:layout_weight="1"
             android:background="@drawable/ovl_5_eeeeee"
             android:gravity="center"
             android:padding="12dp"
             android:text="取消钉钉"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/bt_right"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_goneMarginEnd="0dp" />
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/bt_right"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
+            android:layout_weight="1"
             android:background="@drawable/ovl_5_e50000"
             android:gravity="center"
             android:padding="12dp"
             android:text="继续付款"
             android:textColor="@color/color_of_ffffff"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/bt_left"
-            app:layout_constraintTop_toTopOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:textStyle="bold" />
+    </LinearLayout>
 
 </LinearLayout>
