公司承运人完成

--- a/app/src/main/res/layout/fragment_attestation_driver.xml
+++ b/app/src/main/res/layout/fragment_attestation_driver.xml
@@ -88,6 +88,7 @@
                 android:layout_height="160dp"
                 android:layout_marginLeft="@dimen/gap_app"
                 android:layout_marginRight="@dimen/gap_app" />
+            <include layout="@layout/layout_id_card"/>
 
 
         </LinearLayout>
