--- a/app/src/main/res/layout/fragment_attestation_shipper_company.xml
+++ b/app/src/main/res/layout/fragment_attestation_shipper_company.xml
@@ -71,6 +71,7 @@
                 android:layout_marginLeft="@dimen/gap_app"
                 android:layout_marginRight="@dimen/gap_app"/>
 
+            <include layout="@layout/layout_id_card"/>
 
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
