--- a/app/src/main/res/layout/activity_map_check_path.xml
+++ b/app/src/main/res/layout/activity_map_check_path.xml
@@ -9,33 +9,20 @@
 
 
     <RelativeLayout
+        android:layout_weight="2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
        >
 
         <com.amap.api.maps.MapView
             android:id="@+id/map"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
-
-
-        <com.fy.androidlibrary.widget.CircularFrameLayout
-            android:layout_width="match_parent"
-            android:visibility="gone"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_margin="@dimen/gap_app"
-            app:showBorder="false"
-
-            app:viewradius="5dp">
-
-<!--            <com.hongniu.baselibrary.widget.order.OrderDetailItem-->
-<!--                android:id="@+id/item_order"-->
-<!--                android:layout_width="match_parent"-->
-
-<!--                android:layout_height="wrap_content" />-->
-
-        </com.fy.androidlibrary.widget.CircularFrameLayout>
-
     </RelativeLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:id="@+id/rv"
+        android:background="@color/color_of_ffffff"
+        android:layout_weight="1"
+        android:layout_height="0dp"/>
 </LinearLayout>
