--- a/app/src/main/res/layout/fragment_attestation_carrier_company.xml
+++ b/app/src/main/res/layout/fragment_attestation_carrier_company.xml
@@ -5,53 +5,58 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/color_of_ffffff"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_weight="1"
-        android:layout_height="0dp">
+        android:layout_height="0dp"
+        android:layout_weight="1">
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:orientation="vertical"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
             <com.fy.companylibrary.widget.ItemTextView
-                style="@style/item_edit"
                 android:id="@+id/item_company_name"
+                style="@style/item_edit"
                 app:textcenterhide="请输入企业名称"
                 app:textleft="企业名称" />
 
             <com.fy.companylibrary.widget.ItemTextView
-                style="@style/item_edit"
                 android:id="@+id/item_company_address"
+                style="@style/item_edit"
                 app:textcenterhide="请输入企业地址"
                 app:textleft="企业地址" />
 
             <com.fy.companylibrary.widget.ItemTextView
-                style="@style/item_edit"
                 android:id="@+id/item_name"
+                style="@style/item_edit"
                 app:centerType="normal"
                 app:textcenterhide="请输入联系人姓名"
                 app:textleft="联系人姓名" />
+
             <com.fy.companylibrary.widget.ItemTextView
-                style="@style/item_edit"
                 android:id="@+id/item_id_card"
+                style="@style/item_edit"
                 app:centerType="idcard"
                 app:textcenterhide="请输入联系人身份证号"
                 app:textleft="联系人身份证号" />
+
             <com.fy.companylibrary.widget.ItemTextView
-                style="@style/item_edit"
                 android:id="@+id/item_phone"
+                style="@style/item_edit"
                 app:centerType="phone"
                 app:textcenterhide="请输入联系人手机"
                 app:textleft="联系人手机" />
+
             <com.fy.companylibrary.widget.ItemTextView
-                style="@style/item_edit"
                 android:id="@+id/item_email"
+                style="@style/item_edit"
                 app:centerType="normal"
                 app:textcenterhide="请输入联系人邮箱"
                 app:textleft="联系人邮箱" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -65,10 +70,11 @@
             <com.hongniu.freight.widget.ImageInforView
                 android:id="@+id/img_driver"
 
-                android:layout_marginLeft="@dimen/gap_app"
-                android:layout_marginRight="@dimen/gap_app"
                 android:layout_width="match_parent"
-                android:layout_height="160dp"/>
+                android:layout_height="160dp"
+                android:layout_marginLeft="@dimen/gap_app"
+                android:layout_marginRight="@dimen/gap_app" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -78,19 +84,23 @@
                 android:text="营业执照"
                 android:textColor="@color/color_of_666666"
                 android:textSize="14dp" />
+
             <com.hongniu.freight.widget.ImageInforView
                 android:id="@+id/img_business_license"
 
-                android:layout_marginLeft="@dimen/gap_app"
-                android:layout_marginRight="@dimen/gap_app"
                 android:layout_width="match_parent"
-                android:layout_height="160dp"/>
+                android:layout_height="160dp"
+                android:layout_marginLeft="@dimen/gap_app"
+                android:layout_marginRight="@dimen/gap_app" />
+
+            <include layout="@layout/layout_id_card"/>
+
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
 
     <TextView
-        android:text="下一步"
         android:id="@+id/bt_sum"
-        style="@style/bt_red"/>
+        style="@style/bt_red"
+        android:text="下一步" />
 </LinearLayout>
