查看轨迹UI完成

--- a/app/src/main/res/layout/activity_map_check_path.xml
+++ b/app/src/main/res/layout/activity_map_check_path.xml
@@ -19,9 +19,11 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
     </RelativeLayout>
-    <androidx.recyclerview.widget.RecyclerView
+    <com.fy.androidlibrary.widget.recycle.EmptyRecycleView
         android:layout_width="match_parent"
         android:id="@+id/rv"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        android:orientation="vertical"
         android:background="@color/color_of_ffffff"
         android:layout_weight="1"
         android:layout_height="0dp"/>
