--- a/app/src/main/res/layout/activity_order_create.xml
+++ b/app/src/main/res/layout/activity_order_create.xml
@@ -207,7 +207,7 @@
                     style="@style/item_edit"
                     app:centerType="number"
                     app:textcenterhide="请输入货物重量"
-                    app:textleft="重量(kg)" />
+                    app:textleft="重量(吨)" />
 
                 <com.fy.companylibrary.widget.ItemTextView
                     android:id="@+id/item_size"
